force-app/main/default/objects/CustomerRegForm__c/CustomerRegForm__c.object-meta.xml
<CustomObject>
    <label>CustomerRegForm</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerRegForms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>