force-app/main/default/objects/CustomerRegForm__c/fields/Discount_Provided_On_Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Discount_Provided_On_Nature_Of_Business__c</fullName>
    <label>Discount Provided On Nature Of Business</label>
    <length>200</length>
    <type>Text</type>
</CustomField>