force-app/main/default/objects/CustomerRegForm__c/fields/Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Business__c</fullName>
    <label>Nature Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water Purifiers Company</fullName>
            </value>
            <value>
                <fullName>Gas Connection/Repairs Agency</fullName>
            </value>
            <value>
                <fullName>Interior Makers For Residential</fullName>
            </value>
            <value>
                <fullName>Interior Makers For Commercial</fullName>
            </value>
            <value>
                <fullName>Online Supermarket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>