force-app/main/default/objects/CustomerRegForm__c/fields/Offer_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Offer_End_Time__c</fullName>
    <label>Offer End Time</label>
    <type>Time</type>
</CustomField>