force-app/main/default/objects/CustomerRegForm__c/fields/Status_Of_The_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Status_Of_The_Proposal__c</fullName>
    <label>Status Of The Proposal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>