force-app/main/default/objects/CustomerRegForm__c/recordTypes/CountryIndiaSelected.recordType-meta.xml
<RecordType>
    <fullName>CountryIndiaSelected</fullName>
    <active>true</active>
    <label>CountryIndiaSelected</label>
</RecordType>