force-app/main/default/objects/CustomerRegForm__c/recordTypes/IndiaIsNotSelected.recordType-meta.xml
<RecordType>
    <fullName>IndiaIsNotSelected</fullName>
    <active>true</active>
    <label>IndiaIsNotSelected</label>
</RecordType>